<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.dimiro1</groupId>
    <artifactId>mynes</artifactId>
    <version>0.2.0</version>
    <packaging>pom</packaging>

    <name>mynes</name>
    <description>mynes</description>

    <!-- mynes-desktop depends on mynes-headless rather than the reverse because Main is the one way
         into either mode, and running without a window is a mode of it. That is also why the jar
         and the zip are built there: it is the module with a main class.

         mynes-patch depends on nothing, mynes-core included: IPS says nothing about what it patches,
         so the front ends are what join the two together. -->
    <modules>
        <module>mynes-core</module>
        <module>mynes-patch</module>
        <module>mynes-headless</module>
        <module>mynes-desktop</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>

        <!-- Stamped on every entry of the jar and the zip, in place of the moment the build ran, so
             that two builds of the same source produce byte identical files and the SHA256 published
             beside a release is one anybody can check by building it themselves. The emulator makes
             the same promise about its frames; this is the build keeping it.

             Moved by hand at each release. A stale one costs nothing but an old date on the entries,
             so it is better forgotten than replaced with something that varies. -->
        <project.build.outputTimestamp>2026-08-14T00:00:00Z</project.build.outputTimestamp>

        <flatlaf.version>3.7.2</flatlaf.version>
        <miglayout.version>11.4.3</miglayout.version>
        <annotations.version>26.1.0</annotations.version>
        <jackson.version>2.22.1</jackson.version>
        <junit.version>6.1.3</junit.version>
    </properties>

    <!-- Inherited by all three, because all three want them. Everything a single module needs is
         declared by that module instead; the versions for those are managed below. -->
    <dependencies>
        <!-- Annotations. Provided rather than compile: @Nullable is RetentionPolicy.CLASS, so it
             is read by javac and by an IDE and by nothing at run time, and a jar that shipped it
             would be carrying a dependency it can never call.

             Provided scope does not travel between modules either, which is the other reason it is
             here rather than in one of them: each module compiles against its own copy. -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>${flatlaf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.miglayout</groupId>
                <artifactId>miglayout-swing</artifactId>
                <version>${miglayout.version}</version>
            </dependency>

            <!-- Version only. Both the modules that use it declare test scope themselves, where a
                 reader of that POM can see it: nothing ships Jackson, which is the whole point of
                 com.github.dimiro1.mynes.headless.Json being a writer and not a parser. -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <source>25</source>
                        <target>25</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.6</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.1</version>
                </plugin>

                <!-- Skipped by default, and turned back on by mynes-desktop alone.

                     `mvn compile exec:exec` invokes the goal on every project in the reactor, and
                     four of the five have no main class to give it. Without this the command fails
                     on the first of them before reaching the one that would have worked, and the
                     only way to run the emulator would be to name the module on the command line.
                     Skipping where there is nothing to run keeps the short command working. -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.1</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.8.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>

            <!-- Declared here, rather than only managed above, so that the skip is inherited: a
                 configuration in pluginManagement is not applied to a goal invoked straight from
                 the command line, which is the only way this plugin is ever run.

                 The empty execution matters as much as the plugin does. `exec:exec@headless` picks
                 an execution by id, and on a project that has no execution of that name it runs
                 with an empty configuration rather than with the plugin's, skip included. So the id
                 has to exist everywhere the command might land, doing nothing. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>

                <!-- Covers plain `exec:exec`, which Maven runs under the id default-cli.

                     The executable is named as well as skipped, and both are needed. It is a
                     required parameter, so Maven refuses the goal while injecting it, before the
                     mojo has run far enough to notice it was told to skip; naming something real
                     gets it past that, and the skip then makes it do nothing. `java` because the
                     build is already running on one. -->
                <configuration>
                    <skip>true</skip>
                    <executable>java</executable>
                </configuration>

                <executions>
                    <execution>
                        <id>headless</id>
                        <configuration>
                            <skip>true</skip>
                            <executable>java</executable>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
